Made GET /company/{id}/resources return 19 resources of a mock company
