# src/main/resources/openapi-group-23.yaml
@@ -57,6 +57,7 @@ paths:
     get:
       summary: Return resources of a given company
       description: Return resources of a company based on it's id.
+      operationId: getCompanyResources
       parameters:
         - name: id
           in: path
@@ -76,7 +77,7 @@ paths:
                   properties:
                     id:
                       type: string
-                    resources:
+                    resource:
                       $ref: '#/components/schemas/Resource'
         '404':
           description: The requested company couldn't be found
@@ -96,7 +97,7 @@ components:
           type: string
           format: date
         rarity:
-          type: integer
+          type: float
       example:
         - name: "gold"
           weight: 200
